--- a/templates/ajaxdropdowns.html
+++ b/templates/ajaxdropdowns.html
@@ -2,15 +2,17 @@ $def with ()
 $var jsfiles: ajaxdropdowns.js
 $var cssfiles:
 
-<p>On initial load, this page has static content defined in the 'countries' dropdown.</p>
-<p>Selecting a country will perform three ajax calls:
-    <ul class="list-group">
-        <li class="list-group-item">The 'Regions from JSON' picker is populated using JSON and Javascript</li>
-        <li class="list-group-item">The 'Regions from HTML' picker is populated using HTML from the server</li>
-        <li class="list-group-item">A generic message is returned from the server.</li>
-    </ul>
-</p>
-<hr>
+<div class="alert alert-info" role="alert">
+    <p>On initial load, this page has static content defined in the <em>Countries</em> picker.<br>
+    Selecting a country will perform three ajax calls:</p>
+        <ul class="list-group">
+            <li class="list-group-item"><strong>Regions</strong> picker is populated using <code>return json.dumps()</code></li>
+            <li class="list-group-item"><strong>Regions 2</strong> picker is populated using <code>return "&lt;html&gt;...&lt;&sol;html&gt;"</strong></li>
+            <li class="list-group-item">A generic message is returned from the server for example, <code>datetime()</code>s</li>
+        </ul>
+    </p>
+</div>
+
 <form>
     <div class="form-group row">
         <label for="countries">Countries</label>
@@ -29,7 +31,7 @@ $var cssfiles:
         </div>
     </div>
     <div class="form-group row">
-        <label for="regions2">Regions</label>
+        <label for="regions2">Regions 2</label>
         <div class="col-sm-10">
             <select id="regions2"></select>
         </div>
