missing HTML tag

--- a/templates/ajaxdropdowns.html
+++ b/templates/ajaxdropdowns.html
@@ -7,8 +7,8 @@ $var cssfiles:
     Selecting a country will perform three ajax calls:</p>
         <ul class="list-group">
             <li class="list-group-item"><strong>Regions</strong> picker is populated using <code>return json.dumps()</code></li>
-            <li class="list-group-item"><strong>Regions 2</strong> picker is populated using <code>return "&lt;html&gt;...&lt;&sol;html&gt;"</strong></li>
-            <li class="list-group-item">A generic message is returned from the server for example, <code>datetime()</code>s</li>
+            <li class="list-group-item"><strong>Regions 2</strong> picker is populated using <code>return "&lt;html&gt;...&lt;&sol;html&gt;"</code></li>
+            <li class="list-group-item">A generic message is returned from the server for example, <code>datetime()</code></li>
         </ul>
     </p>
 </div>
