--- a/templates/ajaxdropdowns.html
+++ b/templates/ajaxdropdowns.html
@@ -2,18 +2,17 @@ $def with ()
 $var jsfiles: ajaxdropdowns.js
 $var cssfiles:
 
-<div class="alert alert-info" role="alert">
-    <p>On initial load, this page has static content defined in the <em>Countries</em> picker.<br>
+<div class="row">
+    <p>On initial load, this page has static content defined in the <strong>Countries</strong> picker.<br>
     Selecting a country will perform three ajax calls:</p>
-        <ul class="list-group">
-            <li class="list-group-item"><strong>Regions</strong> picker is populated using <code>return json.dumps()</code></li>
-            <li class="list-group-item"><strong>Regions 2</strong> picker is populated using <code>return "&lt;html&gt;...&lt;&sol;html&gt;"</code></li>
-            <li class="list-group-item">A generic message is returned from the server for example, <code>datetime()</code></li>
-        </ul>
-    </p>
+    <ul class="list-group">
+        <li class="list-group-item"><strong>Regions</strong> picker is populated using <code>return json.dumps()</code></li>
+        <li class="list-group-item"><strong>Regions 2</strong> picker is populated using <code>return "&lt;html&gt;...&lt;&sol;html&gt;"</code></li>
+        <li class="list-group-item">A generic message is returned from the server for example, <code>datetime()</code></li>
+    </ul>
 </div>
 
-<form>
+<div class="row">
     <div class="form-group row">
         <label for="countries">Countries</label>
         <div class="col-sm-10">
@@ -36,6 +35,6 @@ $var cssfiles:
             <select id="regions2"></select>
         </div>
     </div>
-</form>
+</div> <!-- .row -->
 <hr>
 <div id="coolstuff"></div>
