--- a/templates/ajaxdropdowns.html
+++ b/templates/ajaxdropdowns.html
@@ -2,39 +2,43 @@ $def with ()
 $var jsfiles: ajaxdropdowns.js
 $var cssfiles:
 
-<div class="row">
-    <p>On initial load, this page has static content defined in the <strong>Countries</strong> picker.<br>
-    Selecting a country will perform three ajax calls:</p>
-    <ul class="list-group">
-        <li class="list-group-item"><strong>Regions</strong> picker is populated using <code>return json.dumps()</code></li>
-        <li class="list-group-item"><strong>Regions 2</strong> picker is populated using <code>return "&lt;html&gt;...&lt;&sol;html&gt;"</code></li>
-        <li class="list-group-item">A generic message is returned from the server for example, <code>datetime()</code></li>
-    </ul>
-</div>
+<div class="container">
+    <div class="row">
+        <p>On initial load, this page has static content defined in the <strong>Countries</strong> picker.<br>
+        Selecting a country will perform three ajax calls:</p>
+        <ul class="list-group">
+            <li class="list-group-item"><strong>Regions</strong> picker is populated using <code>return json.dumps()</code></li>
+            <li class="list-group-item"><strong>Regions 2</strong> picker is populated using <code>return "&lt;html&gt;...&lt;&sol;html&gt;"</code></li>
+            <li class="list-group-item">A generic message is returned from the server for example, <code>datetime()</code></li>
+        </ul>
+    </div><!-- /.row -->
 
-<div class="row">
-    <div class="form-group row">
-        <label for="countries">Countries</label>
-        <div class="col-sm-10">
-            <select class="form-control" id="countries">
-                <option value="" selected="selected">Choose</option>
-                <option value="Canada">Canada</option>
-                <option value="USA">USA</option>
-            </select>
+    <div class="row">
+        <div class="form-group row">
+            <label for="countries">Countries</label>
+            <div class="col-sm">
+                <select class="form-control" id="countries">
+                    <option value="" selected="selected">Choose</option>
+                    <option value="Canada">Canada</option>
+                    <option value="USA">USA</option>
+                </select>
+            </div>
         </div>
-    </div>
-    <div class="form-group row">
-        <label for="regions">Regions</label>
-        <div class="col-sm-10">
-            <select id="regions"></select>
+        <div class="form-group row">
+            <label for="regions">Regions</label>
+            <div class="col-sm">
+                <select id="regions"></select>
+            </div>
         </div>
-    </div>
-    <div class="form-group row">
-        <label for="regions2">Regions 2</label>
-        <div class="col-sm-10">
-            <select id="regions2"></select>
+        <div class="form-group row">
+            <label for="regions2">Regions 2</label>
+            <div class="col-sm">
+                <select id="regions2"></select>
+            </div>
         </div>
+    </div><!-- /.row -->
+
+    <div class="row">
+        <div id="coolstuff"></div>
     </div>
-</div> <!-- .row -->
-<hr>
-<div id="coolstuff"></div>
+</div><!-- /.container -->
