--- a/templates/index.html
+++ b/templates/index.html
@@ -2,23 +2,26 @@ $def with ()
 $var jsfiles:
 $var cssfiles:
 
-<div class="row">
-    <p>This sample app demonstrates how to deliver an HTML/jQuery web application, using by Python 3.7, web.py and jQuery.<br>
-    I plan to add more ways to use ajax in the future, but for now we've got dropdowns.<br>
-    Version information:</p>
-    <ul class="list-group">
-        <li class="list-group-item">Python 3.7.3</li>
-        <li class="list-group-item">web.py 0.6.2</li>
-        <li class="list-group-item">jQuery 3.2.1</li>
-        <li class="list-group-item">Popper.js 1.12.9</li>
-        <li class="list-group-item">Bootstrap 4</li>
-    </ul>
-</div>
-<div class="row">
-    <p>Most pages in this app (including this one) are delivered using web.py templates and the <code>render()</code> method.<br>
-    However, keeping with the spirit of jQuery and Ajax, web.py templates aren't used beyond delivery of the page. Content is dynamic... that's the point.</p>
-    <h3>Examples</h3>
-    <div class="btn-group">
-        <a class="btn btn-primary" href="/ajaxdropdowns" role="button">Ajax Dropdowns</a>
-    </div>
-</div>
+<div class="container">
+    <div class="row">
+        <p>This sample app demonstrates how to deliver an HTML/jQuery web application, using by Python 3.7, web.py and jQuery.<br>
+        I plan to add more ways to use ajax in the future, but for now we've got dropdowns.<br>
+        Version information:</p>
+        <ul class="list-group">
+            <li class="list-group-item">Python 3.7.3</li>
+            <li class="list-group-item">web.py 0.6.2</li>
+            <li class="list-group-item">jQuery 3.2.1</li>
+            <li class="list-group-item">Popper.js 1.12.9</li>
+            <li class="list-group-item">Bootstrap 4</li>
+        </ul>
+    </div><!-- /.row -->
+
+    <div class="row">
+        <p>Most pages in this app (including this one) are delivered using web.py templates and the <code>render()</code> method.<br>
+        However, keeping with the spirit of jQuery and Ajax, web.py templates aren't used beyond delivery of the page. Content is dynamic... that's the point.</p>
+        <h3>Examples</h3>
+        <div class="btn-group">
+            <a class="btn btn-primary" href="/ajaxdropdowns" role="button">Ajax Dropdowns</a>
+        </div>
+    </div><!-- /.row -->
+</div><!-- /.container -->
