--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,7 @@ $def with (content)
 
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+        <link rel="stylesheet" href="static/style/sticky-footer.css">
 
         <!-- jQuery, Popper.js and Bootstrap JS -->
         <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
@@ -48,11 +49,11 @@ $if content.cssfiles:
         </nav>
         <!-- Python render() -->
 $:content
-        <div class="row bg-secondary">
-            <div class="float-lef" id="app_version">
-                &copy; 2012 your company
+        <footer class="footer">
+            <div class="container">
+                <span class="text-muted" id="app_version">Footer links</span>
+                <span class="text-muted" id="app_version"></div>
             </div>
-            <div id="app_version" class="float-right"></div>
-        </div>
+        </footer>
     </body>
 </html>
