--- a/templates/ajaxdropdowns.html
+++ b/templates/ajaxdropdowns.html
@@ -27,13 +27,13 @@ $var cssfiles:
         <div class="form-group row">
             <label for="regions">Regions</label>
             <div class="col-sm">
-                <select id="regions"></select>
+                <select class="form-control" id="regions"></select>
             </div>
         </div>
         <div class="form-group row">
             <label for="regions2">Regions 2</label>
             <div class="col-sm">
-                <select id="regions2"></select>
+                <select class="form-control" id="regions2"></select>
             </div>
         </div>
     </div><!-- /.row -->
