--- a/templates/ajaxdropdowns.html
+++ b/templates/ajaxdropdowns.html
@@ -15,9 +15,9 @@ $var cssfiles:
 
     <div class="row">
         <div class="form-group row">
-            <label for="countries">Countries</label>
+            <label for="countries" class="col-sm-2 col-form-label">Countries</label>
             <div class="col-sm">
-                <select class="form-control" id="countries">
+                <select class="form-control form-control-lg" id="countries">
                     <option value="" selected="selected">Choose</option>
                     <option value="Canada">Canada</option>
                     <option value="USA">USA</option>
@@ -25,15 +25,15 @@ $var cssfiles:
             </div>
         </div>
         <div class="form-group row">
-            <label for="regions">Regions</label>
+            <label for="regions" class="col-sm-2 col-form-label">Regions</label>
             <div class="col-sm">
-                <select class="form-control" id="regions"></select>
+                <select class="form-control form-control-lg" id="regions"></select>
             </div>
         </div>
         <div class="form-group row">
-            <label for="regions2">Regions 2</label>
+            <label for="regions2" class="col-sm-2 col-form-label">Regions 2</label>
             <div class="col-sm">
-                <select class="form-control" id="regions2"></select>
+                <select class="form-control form-control-lg" id="regions2"></select>
             </div>
         </div>
     </div><!-- /.row -->
