--- a/templates/base.html
+++ b/templates/base.html
@@ -51,8 +51,8 @@ $if content.cssfiles:
 $:content
         <footer class="footer">
             <div class="container">
-                <span class="text-muted" id="app_version">Footer links</span>
-                <span class="text-muted" id="app_version"></div>
+                <span class="text-info" id="coolstuff"></span>
+                <span class="text-muted">Generate system time with Pythons <code>datetime.now()</code> method and fetch it with Ajax.</span>
             </div>
         </footer>
     </body>
