--- a/templates/index.html
+++ b/templates/index.html
@@ -14,8 +14,8 @@ $var cssfiles:
     </div><!-- /.row -->
 
     <div class="row">
-        <div class="card text-white bg-info mb-3" style="max-width: 18rem;">
-            <div class="card-header" style="font-size:100px;">&#1f914;</div>
+        <div class="card text-white bg-info mb-8">
+            <div class="card-header">&#x2139;</div>
             <div class="card-body">
                 <h5 class="card-title">What's going on here?</h5>
                 <p>Pages are rendered from <strong>web.py</strong> templates using the <code>render()</code> method. <code>GET</code> and <code>POST</code> calls are handled by jQuery on client-side, and Python on server-side.</p>
