--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@ $var cssfiles:
     </div><!-- /.row -->
 
     <div class="row">
-        <div class="card text-white bg-info mb-8">
+        <div class="card text-white bg-dark mb-8">
             <div class="card-header">&#x2139;</div>
             <div class="card-body">
                 <h5 class="card-title">What's going on here?</h5>
