--- a/templates/ajaxdropdowns.html
+++ b/templates/ajaxdropdowns.html
@@ -13,10 +13,10 @@ $var cssfiles:
         </ul>
     </div><!-- /.row -->
 
-    <div class="row">
+    <div class="text-white bg-dark row">
         <div class="form-group row">
-            <label for="countries" class="col-sm col-form-label">Countries</label>
-            <div class="col-sm">
+            <label for="countries" class="col-sm-2 col-form-label">Countries</label>
+            <div class="col-sm-4">
                 <select class="form-control form-control-lg" id="countries">
                     <option value="" selected="selected">Choose</option>
                     <option value="Canada">Canada</option>
@@ -25,14 +25,14 @@ $var cssfiles:
             </div>
         </div>
         <div class="form-group row">
-            <label for="regions" class="col-sm col-form-label">Regions</label>
-            <div class="col-sm">
+            <label for="regions" class="col-sm-2 col-form-label">Regions</label>
+            <div class="col-sm-4">
                 <select class="form-control form-control-lg" id="regions"></select>
             </div>
         </div>
         <div class="form-group row">
-            <label for="regions2" class="col-sm col-form-label">Regions 2</label>
-            <div class="col-sm">
+            <label for="regions2" class="col-sm-2 col-form-label">Regions 2</label>
+            <div class="col-sm-4">
                 <select class="form-control form-control-lg" id="regions2"></select>
             </div>
         </div>
