--- a/templates/ajaxdropdowns.html
+++ b/templates/ajaxdropdowns.html
@@ -17,7 +17,7 @@ $var cssfiles:
         <div class="form-group row">
             <label for="countries" class="col-sm-2 col-form-label">Countries</label>
             <div class="col-sm-4">
-                <select class="form-control form-control-lg" id="countries">
+                <select class="form-control" id="countries">
                     <option value="" selected="selected">Choose</option>
                     <option value="Canada">Canada</option>
                     <option value="USA">USA</option>
@@ -27,13 +27,13 @@ $var cssfiles:
         <div class="form-group row">
             <label for="regions" class="col-sm-2 col-form-label">Regions</label>
             <div class="col-sm-4">
-                <select class="form-control form-control-lg" id="regions"></select>
+                <select class="form-control" id="regions"></select>
             </div>
         </div>
         <div class="form-group row">
             <label for="regions2" class="col-sm-2 col-form-label">Regions 2</label>
             <div class="col-sm-4">
-                <select class="form-control form-control-lg" id="regions2"></select>
+                <select class="form-control" id="regions2"></select>
             </div>
         </div>
     </div><!-- /.row -->
