--- a/templates/ajaxdropdowns.html
+++ b/templates/ajaxdropdowns.html
@@ -13,28 +13,26 @@ $var cssfiles:
         </ul>
     </div><!-- /.row -->
 
-    <div class="text-white bg-dark row">
-        <div class="form-group row">
-            <label for="countries" class="col-sm-2 col-form-label">Countries</label>
-            <div class="col-sm-10">
-                <select class="form-control" id="countries">
-                    <option value="" selected="selected">Choose</option>
-                    <option value="Canada">Canada</option>
-                    <option value="USA">USA</option>
-                </select>
-            </div>
+    <div class="row">
+        <div class="form-group">
+            <label for="countries">Countries</label>
+            <select class="form-control" id="countries">
+                <option value="" selected="selected">Choose</option>
+                <option value="Canada">Canada</option>
+                <option value="USA">USA</option>
+            </select>
         </div>
-        <div class="form-group row">
-            <label for="regions" class="col-sm-2 col-form-label">Regions</label>
-            <div class="col-sm-10">
-                <select class="form-control" id="regions"></select>
-            </div>
+        <div class="form-group">
+            <label for="regions">Regions</label>
+            <select class="form-control" id="regions">
+                <option value="" selected="selected">Choose</option>
+            </select>
         </div>
-        <div class="form-group row">
-            <label for="regions2" class="col-sm-2 col-form-label">Regions 2</label>
-            <div class="col-sm-10">
-                <select class="form-control" id="regions2"></select>
-            </div>
+        <div class="form-group">
+            <label for="regions2">Regions 2</label>
+            <select class="form-control" id="regions2">
+                <option value="" selected="selected">Choose</option>
+            </select>
         </div>
     </div><!-- /.row -->
 </main><!-- /.container -->
