--- a/templates/ajaxdropdowns.html
+++ b/templates/ajaxdropdowns.html
@@ -13,10 +13,10 @@ $var cssfiles:
         </ul>
     </div><!-- /.row -->
 
-    <div class="row">
+    <div class="text-white bg-dark row">
         <div class="form-group">
             <label for="countries">Countries</label>
-            <select class="form-control" id="countries">
+            <select class="form-control form-control-lg" id="countries">
                 <option value="" selected="selected">Choose</option>
                 <option value="Canada">Canada</option>
                 <option value="USA">USA</option>
@@ -24,13 +24,13 @@ $var cssfiles:
         </div>
         <div class="form-group">
             <label for="regions">Regions</label>
-            <select class="form-control" id="regions">
+            <select class="form-control form-control-lg" id="regions">
                 <option value="" selected="selected">Choose</option>
             </select>
         </div>
         <div class="form-group">
             <label for="regions2">Regions 2</label>
-            <select class="form-control" id="regions2">
+            <select class="form-control form-control-lg" id="regions2">
                 <option value="" selected="selected">Choose</option>
             </select>
         </div>
