--- a/templates/ajaxdropdowns.html
+++ b/templates/ajaxdropdowns.html
@@ -1,6 +1,6 @@
 $def with ()
 $var js: ajaxdropdowns.js
-$var css: style.css
+$var css:
 
 <header role="header" class="container">
     <div class="jumbotron jumbotron-fluid text-light">
