--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,5 @@
 $def with (content)
+$var css = style.css sticky-footer.css
 <!doctype html>
 <html lang="en">
     <head>
@@ -10,23 +11,12 @@ $def with (content)
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <link rel="stylesheet" href="static/style/sticky-footer.css">
 
-        <!-- jQuery, Popper.js and Bootstrap JS -->
-        <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
         <script src="static/script/base.js"></script>
 
-
-        <!-- TODO: move to footer -->
-        <!-- Include *.js files defined in the content page -->
-$if content.jsfiles:
-    $for f in content.jsfiles.split():
-        <script type="text/javascript" src="static/script/$f"></script>
-
         <!-- Include *.css files defined on the content page -->
-$if content.cssfiles:
-	$for f in content.cssfiles.split():
+$if content.css:
+	$for f in content.css.split():
 		<link type="text/css" href="static/style/$f" rel="stylesheet">
             
         <title>web.py - jQuery</title>
@@ -55,5 +45,14 @@ $:content
                 <span class="text-muted">Generate system time with Pythons <code>datetime.now()</code> method and fetch it with Ajax.</span>
             </div>
         </footer>
+        <!-- /.content -->
+        <!-- jQuery, Popper.js and Bootstrap JS -->
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+        <!-- Optional JS -->
+$if content.js:
+    $for f in content.js.split():
+        <script src="static/script/$f"></script>
     </body>
 </html>
