--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,6 @@
 $def with (content)
-$var css = style.css sticky-footer.css
+$var js:
+$var css: style.css sticky-footer.css
 <!doctype html>
 <html lang="en">
     <head>
