--- a/templates/ajaxdropdowns.html
+++ b/templates/ajaxdropdowns.html
@@ -2,7 +2,7 @@ $def with ()
 $var js: ajaxdropdowns.js
 $var css:
 
-<header role="header" class="container">
+<header class="container">
     <div class="jumbotron jumbotron-fluid text-light">
         <h1 class="display-4">Dropdowns</h1>
         <p class="lead">Dynamically populated dropdowns with <strong>web.py</strong> on the server-side and <strong>jQuery</strong> on the client-side. The first dropdown is plain static HTML in this page, the second fetches a JSON object from the server, and the third dropdown fetches plain HTML from the server..</p>
@@ -42,37 +42,10 @@ $var css:
 </header>
 <!-- /.container -->
 
-<main role="main" class="container">
-    <div class="row">
-        <p>On initial load, this page has static content defined in the <strong>Countries</strong> picker.<br>
-        Selecting a country will perform three ajax calls:</p>
-        <ul class="list-group">
-            <li class="list-group-item"><strong>Regions</strong> picker is populated using <code>return json.dumps()</code></li>
-            <li class="list-group-item"><strong>Regions 2</strong> picker is populated using <code>return "&lt;html&gt;...&lt;&sol;html&gt;"</code></li>
-            <li class="list-group-item">A generic message is returned from the server for example, <code>datetime()</code></li>
-        </ul>
-    </div><!-- /.row -->
+<footer class="footer">
+    <div class="container">
+        <span class="text-info" id="coolstuff"></span>
+        <span class="text-muted">Generate system time with Pythons <code>datetime.now()</code> method and fetch it with Ajax.</span>
+    </div>
+</footer>
 
-    <div class="text-white bg-dark row">
-        <div class="form-group">
-            <label for="countries">Countries</label>
-            <select class="form-control form-control-lg" id="countries">
-                <option value="" selected="selected">Choose</option>
-                <option value="Canada">Canada</option>
-                <option value="USA">USA</option>
-            </select>
-        </div>
-        <div class="form-group">
-            <label for="regions">Regions</label>
-            <select class="form-control form-control-lg" id="regions">
-                <option value="" selected="selected">Choose</option>
-            </select>
-        </div>
-        <div class="form-group">
-            <label for="regions2">Regions 2</label>
-            <select class="form-control form-control-lg" id="regions2">
-                <option value="" selected="selected">Choose</option>
-            </select>
-        </div>
-    </div><!-- /.row -->
-</main><!-- /.container -->
