--- a/templates/base.html
+++ b/templates/base.html
@@ -21,30 +21,9 @@ $if content.css:
         <title>web.py - jQuery</title>
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="app_header">
-            <a class="navbar-brand" id="app_header_logo"></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" id="app_header_icons">
-                            <img id="settings_btn" src="static/images/settings_24.png" alt="Settings" title="Settings" > <span class="sr-only">(current)</span></a>
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-        <!-- Python render() -->
+        <!-- Begin content -->
 $:content
-        <footer class="footer">
-            <div class="container">
-                <span class="text-info" id="coolstuff"></span>
-                <span class="text-muted">Generate system time with Pythons <code>datetime.now()</code> method and fetch it with Ajax.</span>
-            </div>
-        </footer>
-        <!-- /.content -->
+        <!-- End content -->
 
         <!-- jQuery, Popper.js and Bootstrap JS -->
         <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
