--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,7 @@ $:content
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
         
         <!-- Custom JS -->
-        <script src="static/script/base.js"></script>
+        <!--<script src="static/script/base.js"></script>-->
 $if content.js:
     $for f in content.js.split():
         <script src="static/script/$f"></script>
