--- a/templates/base.html
+++ b/templates/base.html
@@ -11,8 +11,13 @@ $def with (content)
         
         <!-- Custom CSS -->
         <link rel="stylesheet" href="static/style/sticky-footer.css">
-        <link rel="stylesheet" href="static/style/style.css">
-
+        <style>
+            .jumbotron {
+                padding: 70px 30px 70px 30px;
+                margin: 0px auto;
+                background: #601a46!important;
+            }
+        </style>
 
         <!-- Include CSS CSS defined on the content page -->
 $if content.css:
