--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@ $def with (content)
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         
         <!-- Custom CSS -->
-        <link rel="stylesheet" href="static/style/sticky-footer.css">
+        <!--<link rel="stylesheet" href="static/style/sticky-footer.css">-->
         <style>
             .jumbotron {
                 padding: 70px 30px 70px 30px;
