--- a/templates/ajaxdropdowns.html
+++ b/templates/ajaxdropdowns.html
@@ -42,10 +42,10 @@ $var css:
 </header>
 <!-- /.container -->
 
-<footer class="footer">
+<!--<footer class="footer">
     <div class="container">
         <span class="text-info" id="coolstuff"></span>
         <span class="text-muted">Generate system time with Pythons <code>datetime.now()</code> method and fetch it with Ajax.</span>
     </div>
-</footer>
+</footer>-->
 
