--- a/templates/ajaxdropdowns.html
+++ b/templates/ajaxdropdowns.html
@@ -3,8 +3,8 @@ $var js: ajaxdropdowns.js
 $var css:
 
 <header class="container">
-    <div class="jumbotron jumbotron-fluid text-light">
-        <h1 class="display-4">Dropdowns</h1>
+    <div class="jumbotron jumbotron-fluid text-light bg-dark">
+        <h1 class="display-4">web.py</h1>
         <p class="lead">Dynamically populated dropdowns with <strong>web.py</strong> on the server-side and <strong>jQuery</strong> on the client-side. The first dropdown is plain static HTML in this page, the second fetches a JSON object from the server, and the third dropdown fetches plain HTML from the server..</p>
         <hr class="my-4">
         <p>Like this...</p>
@@ -14,7 +14,7 @@ $var css:
                 <label for="countries" class="col">Static:</label>
                 <!--<div class="col-sm-2">-->
                 <div class="col">
-                    <select class="form-control form-control-lg" id="countries">
+                    <select class="form-control form-control-lg text-light bg-dark" id="countries">
                         <option value="" selected="selected">Choose</option>
                         <option value="Canada">Canada</option>
                         <option value="USA">USA</option>
@@ -24,7 +24,7 @@ $var css:
             <div class="form-group">
                 <label for="regions" class="col">Ajax JSON:</label>
                 <div class="col">
-                    <select class="form-control form-control-lg" id="regions">
+                    <select class="form-control form-control-lg text-light bg-dark" id="regions">
                         <option value="" selected="selected">Choose</option>
                     </select>
                 </div>
@@ -32,7 +32,7 @@ $var css:
             <div class="form-group">
                 <label for="regions2" class="col">Ajax HTML:</label>
                 <div class="col">
-                    <select class="form-control form-control-lg" id="regions2">
+                    <select class="form-control form-control-lg text-light bg-dark" id="regions2">
                         <option value="" selected="selected">Choose</option>
                     </select>
                 </div>
