--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@ $if content.css:
             
         <title>web.py - jQuery</title>
     </head>
-    <body>
+    <body class="text-white bg-dark">
         <!-- Begin content -->
 $:content
         <!-- End content -->
