Change file names

--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,7 @@ $if content.css:
 	$for f in content.css.split():
 		<link type="text/css" href="static/style/$f" rel="stylesheet">
             
-        <title>web.py - jQuery</title>
+        <title>web.py</title>
     </head>
     <body class="text-white bg-dark">
         <!-- Begin content -->
