--- a/templates/home.html
+++ b/templates/home.html
@@ -4,10 +4,10 @@ $var css:
 
 <header class="container">
     <div class="jumbotron jumbotron-fluid bg-transparent">
-        <h1 class="display-4">Homepage</h1>
+        <h1 class="display-4">Home</h1>
         <p class="lead">Dynamic content with <strong>web.py</strong> on the server-side and <strong>jQuery</strong> on the client-side. Then some <strong>Bootstrap 4</strong> to make it look pretty.</p>
         <hr class="my-4">
         <p>Examples</p>
-        <a class="btn btn-succes">Dropdowns</a>
+        <a class="btn btn-success" href="dropdown">Dropdown</a>
     </div>
 </header>
