--- a/templates/dropdown.html
+++ b/templates/dropdown.html
@@ -4,7 +4,7 @@ $var css:
 
 <header class="container">
     <div class="jumbotron jumbotron-fluid bg-transparent">
-        <h1 class="display-4">web.py</h1>
+        <h1 class="display-4">Dropdown</h1>
         <p class="lead">Dynamically populated dropdowns with <strong>web.py</strong> on the server-side and <strong>jQuery</strong> on the client-side. The first dropdown is plain static HTML in this page, the second fetches a JSON object from the server, and the third dropdown fetches plain HTML from the server..</p>
         <hr class="my-4">
         <p>Like this...</p>
