--- a/templates/chart.html
+++ b/templates/chart.html
@@ -7,6 +7,6 @@ $var css:
         <h1 class="display-4">Chart</h1>
         <p class="lead">Chart hero..</p>
         <hr class="my-4">
-        <div id="chart_div" style="width: 400px; height: 120px;"></div>
+        <div class="mx-auto w-50" id="chart_div"></div>
     </div>
 </header>
